# dataset_rag

./: README.md
dataset_rag/: pyproject.toml  start_dataset_rag.sh
dataset_rag/app/clients/: milvus_utils.py
dataset_rag/app/conf/: bailian_mcp_config.py  lm_config.py
dataset_rag/app/import_process/agent/: kb_import_state_graph.mmd  kb_import_state_graph.txt  main_graph.py  state.py  瀵煎叆杩囩▼璁板綍.txt
dataset_rag/app/import_process/agent/nodes/: node_bge_embedding.py  node_document_split.py  node_entry.py  node_import_milvus.py  node_item_name_recognition.py  node_md_img.py  node_pdf_to_md.py
dataset_rag/app/import_process/api/: import_server.py
dataset_rag/app/import_process/page/: import.html
dataset_rag/app/lm/: lm_utils.py
dataset_rag/app/query_process/agent/: kb_query_state_graph.mmd  kb_query_state_graph.txt  main_graph.py
dataset_rag/app/query_process/agent/nodes/: node_answer_output.py  node_item_name_confirm.py  node_rerank.py  node_rrf.py  node_search_embedding.py  node_search_embedding_hyde.py  node_web_search_mcp.py
dataset_rag/app/query_process/api/: query_server.py
dataset_rag/app/query_process/page/: chat.html  query_monitor.html
dataset_rag/app/query_process/sse/: sse_step_1.html  sse_step_2.html
dataset_rag/app/test/: test_import_main_graph.py
dataset_rag/app/tool/: download_bgem3.py  download_reranker.py
dataset_rag/prompts/: product_recognition_system.prompt
