[project]
name = "dataset-rag"
version = "0.1.0"
description = "基于 LangGraph、Milvus 与 BGE-M3 的多路召回知识库 RAG 系统"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "flagembedding>=1.4.0",
    "grandalf>=0.8",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "loguru>=0.7.3",
    "magic-pdf>=1.3.12",
    "minio>=7.2.20",
    "modelscope>=1.37.1",
    "numpy>=2.4.4",
    "openai-agents>=0.4.2",
    "pandas>=3.0.3",
    "pymilvus>=3.0.0",
    "pymilvus-model>=0.3.2",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "regex>=2026.5.9",
    "torch==2.11.0+cu128",
    "torchaudio==2.11.0+cu128",
    "torchvision==0.26.0+cu128",
    "uvicorn>=0.48.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]
torchaudio = [
    { index = "pytorch-cu128" },
]
torchvision = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
